eazybank-k8s/k8s/base/00-namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eazybank
  labels:
    app.kubernetes.io/managed-by: kubectl
    env: production
